--- a/boiler_weather_compensation.yaml
+++ b/boiler_weather_compensation.yaml
@@ -173,13 +173,13 @@ blueprint:
 
     heating_demand_neutral:
       name: "Demand Neutral Point"
-      description: "Demand value that produces no scaling (factor = 1.0). Below this, flow temp is reduced; above it is increased."
-      default: 20
+      description: "Demand value that produces no scaling (factor = 1.0). Below this, flow temp is reduced; above it is increased. For avg-delta-based demand sensors, typical values are 1–3."
+      default: 1.5
       selector:
         number:
-          min: 0
+          min: 0.5
           max: 100
-          step: 5
+          step: 0.5
           mode: slider
 
     heating_demand_power:
